<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registrationView"
    android:background = "#F8F8F8">

    <Button
        android:id="@+id/comeBackToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/registrationViewComeBacKButton"
        app:backgroundTint="@color/color_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.814"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="40dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comeBackToLogin">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:text="@string/registrationViewDescription"
            android:textColor="@color/color_button"
            android:textSize="32sp"
            app:fontFamily="@font/roboto" />

        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30sp"
            android:background="@color/background_edit_text"
            android:ems="10"
            android:hint="@string/registrationUserName"
            android:textColor = "#000000"
            android:textColorHint = "#5F5E5E"
            android:inputType="text"
            android:minHeight="48dp"
            android:paddingLeft="13sp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30sp"
            android:background="@color/background_edit_text"
            android:ems="10"
            android:hint="@string/mobilePhoneAuthorizationView"
            android:textColor = "#000000"
            android:textColorHint = "#5F5E5E"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingLeft="13sp" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint = "#5F5E5E"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/color_button">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:background="@color/background_edit_text"
                android:ems="10"
                android:hint="@string/passwordAuthorizationView"
                android:textColor = "#000000"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:paddingLeft="13sp"


                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/repeatPasswordL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:textColorHint = "#5F5E5E"
            app:passwordToggleTint="@color/color_button">
        <EditText
            android:id="@+id/repeatPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_edit_text"
            android:ems="10"
            android:hint="@string/repeatPassword"
            android:textColorHint = "#5F5E5E"
            android:textColor = "#000000"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingLeft="13sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/registrationButton"
        android:layout_width="223dp"
        android:layout_height="53dp"
        android:layout_marginTop="32dp"
        android:text="@string/registrationButton"
        app:backgroundTint="@color/color_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.787"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />
</androidx.constraintlayout.widget.ConstraintLayout>