<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authorizationView"
    android:background = "#F8F8F8">


    <TextView
        android:id="@+id/authorization_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:text="@string/authorization_welcome"
        android:textColor="@color/color_button"
        android:textSize="32sp"
        android:textStyle="bold"
        app:fontFamily="@font/roboto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/network_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/network_acc"
        android:textColor="@color/color_main_text"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.417"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authorization_welcome" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="200dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/network_acc"
        app:layout_constraintVertical_bias="0.0">

        <ImageButton
            android:id="@+id/vk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/oops"
            android:src="@drawable/vk_logo" />

        <ImageButton
            android:id="@+id/google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/oops"
            android:src="@drawable/google_logo" />

        <ImageButton
            android:id="@+id/telegram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/oops"
            android:src="@drawable/telegram_logo" />

        <ImageButton
            android:id="@+id/facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/oops"
            android:src="@drawable/fasebook_logo" />
    </LinearLayout>

    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/or"
        android:textColor="@color/color_main_text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <View
        android:id="@+id/view3"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="5dp"
        android:background="@android:color/black"
        app:layout_constraintEnd_toStartOf="@+id/or"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <View
        android:id="@+id/view4"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="40dp"
        android:background="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/or"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/or">

        <EditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_edit_text"
            android:ems="10"
            android:textColor = "#000000"
            android:textColorHint = "#5F5E5E"
            android:hint="@string/mobilePhoneAuthorizationView"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingLeft="13sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordAuntificL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint = "#5F5E5E"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/color_button">

            <EditText
                android:id="@+id/passwordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20sp"
                android:background="@color/background_edit_text"
                android:ems="10"
                android:hint="@string/passwordAuthorizationView"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:paddingLeft="13sp"
                android:textColor="#000000"
                android:textColorHint="#5F5E5E" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20sp"
            android:layout_weight="1"
            android:text="@string/registrationButtonOnAuthorizationView"
            app:backgroundTint="@color/color_button" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/loginButtonOnAuthorizationView"
            app:backgroundTint="@color/color_button" />
    </LinearLayout>

    <TextView
        android:id="@+id/userForgotPassword"
        android:layout_width="127dp"
        android:layout_height="20dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/userForgotPassword"
        android:textColor="@color/color_button"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.859"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <TextView
        android:id="@+id/politics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:gravity="center"
        android:text="@string/politics"
        android:textColor="@color/color_button"
        android:textSize="15sp"
        app:fontFamily="@font/roboto_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/company_app"
        android:gravity="center"
        android:textColor="@color/color_button"
        android:textSize="15sp"
        app:fontFamily="@font/roboto_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/politics" />

</androidx.constraintlayout.widget.ConstraintLayout>